--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
-    "@babel/preset-env": "^7.10.3"
+    "@babel/preset-env": "^7.10.3",
+    "dotenv": "^8.2.0"
   }
 }
